Apply Openrewrite Java 17 Rule