@@ -163,7 +163,7 @@ class ResetPasswordControllerTest extends TestClassNullifier {
             );
 
             String emailContent = captor.getValue();
-            assertThat(emailContent, containsString(String.format("A request has been made to reset your %s account password for %s", companyName, "user@example.com")));
+            assertThat(emailContent, containsString("A request has been made to reset your %s account password for %s".formatted(companyName, "user@example.com")));
             assertThat(emailContent, containsString("Your account credentials for " + domain + " are managed by an external service. Please contact your administrator for password recovery requests."));
             assertThat(emailContent, containsString("Thank you,<br />\n    " + companyName));
         } finally {
